2001-12-02  Ion Badulescu  <ionut@moisil.badula.org>

	* hlfsd/homedir.c (plt_print): fix typo (s/plot/plog/) in
	non-mkstemp code

	* scripts/ctl-amd.in: touch/remove /var/lock/subsys/amd to make RH
	happy

	* scripts/ctl-hlfsd.in: ditto (for hlfsd)

	* conf/mtab/mtab_file.c (rewrite_mtab): fchmod(644) the file we
	get from mkstemp(), otherwise samba becomes very unhappy (sigsegv)

	* conf/mtab/mtab_mach3.c (rewrite_mtab): ditto

2001-11-29  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* tasks: updated

	* NEWS: document the fixed autofs fd leak

	* amq/amq.8: better document the -f option

2001-11-29  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* libamu/mount_fs.c (mnt_flags): same this as for nolock option
	handling, do for maxgrps.

2001-11-29  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* conf/autofs/autofs_linux.c (hash_init): determine the max number
	of fd's at runtime, use it to dynamically scale the hash and list
	arrays
	(autofs_get_fh): sanity check, don't allow a pipe() fd greater
	than autofs_max_fds
	(autofs_release_fh): close our end of the pipe here (no clue why
	or when it got commented out)
	(autofs_mounted): set kernelfd to -1 after closing it

2001-11-28  Philippe Troin  <phil@fifi.org>

	* libamu/mount_fs.c (mnt_flags): Drop nolock from generic mount
	opts.
	(compute_nfs_args): Added nolock handling.
	Adapted from an original patch from Avery Pennarun <apenwarr@nit.ca>.

2001-11-27  Erez Zadok  <ezk@a-hpux11i.fsl.cs.sunysb.edu>

	* ported to ia64-hp-hpux11.20 using HP's ANSI/C compiler.
	Couldn't use bison/flex because of 32-bit vs. 64-bit binaries
	issues.  Had to use HP's own yacc/lex.

2001-11-26  Erez Zadok  <ezk@a-hpux11i.fsl.cs.sunysb.edu>

	* */Makefile.am: don't use $(OBJECTS) directly because it is no
	longer automatically defined now that Automake has automatic
	dependency tracking (which I turn off).  Instead, hard-code
	minimal dependencies on am-utils' header files to depend on